# eqnet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: example_preprocessing.py  example_simple_gcn.py  preprocess_shiba_dataset.py
src/eqnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  equivariant_network.py  simple_gcn.py
src/modules/: __init__.py  blocks.py  radial.py
src/tools/: scatter.py
